# src/routers/order.router.ts
@@ -10,16 +10,18 @@ import {
   getUnconfirmed,
   updateOrder,
 } from "../controllers/order.controller";
-import { auth } from "../middleware";
+import { authByKey, authenticate } from "../middleware";
+import { Order } from "../models/order.model";
 
 const router = Router();
+const authorize = authByKey(Order, "user");
 
 router.get("/", getOrders);
 router.get("/states", getStates);
 router.get("/unconfirmed", getUnconfirmed);
 router.get("/:id", getOrder);
-router.post("/", auth, createOrder);
-router.patch("/", auth, updateOrder);
-router.delete("/:id", auth, deleteOrder);
+router.post("/", authenticate, createOrder);
+router.patch("/", authenticate, authorize.update, updateOrder);
+router.delete("/:id", authenticate, authorize.delete, deleteOrder);
 
 export default router;
